# llmEval

./: .gitignore  README.md  deepeval.yaml  main.py  pyproject.toml  requirements.in  requirements.txt  sample.env
.deepeval/: .deepeval_telemetry.txt
.github/workflows/: ci.yml
agent/: __init__.py  planner.py
config/: __init__.py  settings.py
decision_engine/: __init__.py  rules.py
evaluation/: __init__.py  comparison.py  deepeval_runner.py  phoenix_eval.py  rate_limiter.py
models/: __init__.py  schemas.py
tests/: __init__.py  conftest.py
tests/deepeval/: __init__.py  test_agent_evaluation.py
tests/functional/: __init__.py  test_tools.py
tests/regression/: __init__.py  conftest.py  test_book_regression.py  test_neo_regression.py  test_nutrition_regression.py  test_poetry_regression.py
tests/regression/__snapshots__/: test_book_regression.ambr  test_neo_regression.ambr  test_nutrition_regression.ambr  test_poetry_regression.ambr
tests/schema/: __init__.py  test_schemas.py
tools/: __init__.py  base.py  book_tool.py  nasa_tool.py  nutrition_tool.py  poetry_tool.py
